chore: cleanup deprecated APIs